move sessions to server